# sshaman

./: entrypoint.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/plans/: 00-master-plan.md  01-backend-migration.md  02-code-review.md  03-cli-revamp.md  04-tui-revamp.md  05-testing-strategy.md  06-migration-guide.md  07-testing-plans.md
.github/workflows/: ci.yml  nightly.yml  publish.yml
backend/: __init__.py  host_entry.py  manager.py  migrate.py  ssh_config.py
cli/: sshaman_cli.py
scripts/: lint.sh  test
tests/: conftest.py  test_cli.py  test_tui.py
tests/test_backend/: test_host_entry.py  test_manager.py  test_migrate.py  test_ssh_config.py
tui/: __init__.py  app.py
tui/screens/: __init__.py  config_files.py  confirm.py  host_detail.py  host_form.py
tui/widgets/: __init__.py
